# PaddleOCR-ncnn-CPP

./: CMakeLists.txt  README.md  config.json
src/: angle_net.cpp  angle_net.h  crnn_net.cpp  db_net.cpp  main.cpp  ocr_engine.cpp  utils.cpp  utils.h
